# security-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Kimi.md  SECURITY_FIXES_REQUIRED.md
scripts/: active_exploitation.py  api_reconnaissance_logger.py  check_login_methods.py  check_remote_server.sh  credential_attacks.py  deep_cve_exploitation.py  deep_security_analyzer.py  deep_test.py  detect_compromise.py  download_evidence.py  exploit_openwebui.py  extract_exposed_api_data.py  incident_response_analysis.py  investigate_405.py  ip_investigation.py  prefix_based_enumerator.py  promo_code_enumerator.py  public_vuln_test.py  real_api_test.py  real_attacker_scenarios.py  real_data_extractor.py  real_exploit_promo_codes.py  real_exploit_promo_codes_enhanced.py  remote_incident_response.py  security_audit_owner.py  verified_test.py  vulnerable_api_server.py
tools/: README.md  accurate_surface_scanner.py  api_security_tester.py  auth_security_tester.py  business_logic_scanner.py  common.py  pentest_toolkit.py  shadow_recon.py  shadow_scanner.py  web_vulnerability_scanner.py
