[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pentest-toolkit"
version = "2.0.0"
description = "Professional Penetration Testing Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PenTestToolkit Team"},
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "PyJWT>=2.6.0",
    "dnspython>=2.2.0",
    "colorama>=0.4.5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/HassanSalah120/security-toolkit"
Repository = "https://github.com/HassanSalah120/security-toolkit"

[project.scripts]
pentest-toolkit = "tools.pentest_toolkit:main"
shadow-scanner = "tools.shadow_scanner:main"
shadow-recon = "tools.shadow_recon:main"
web-vuln-scanner = "tools.web_vulnerability_scanner:main"
api-security-tester = "tools.api_security_tester:main"
auth-security-tester = "tools.auth_security_tester:main"
business-logic-scanner = "tools.business_logic_scanner:main"
accurate-surface-scanner = "tools.accurate_surface_scanner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
